# R-Angular-Runtime-X-Ray

./: .gitignore  .vscodeignore  ARCHITECTURE.md  BUILD_GUIDE.md  CHANGELOG.md  COMPLETED_FEATURES.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP.md  VERIFICATION_CHECKLIST.md  package-lock.json  package.json  publish.bat  tsconfig.json
examples/: README.md  sample-component.ts
native/: Cargo.toml
native/src/: comparison.rs  file_locator.rs  flame_graph.rs  lib.rs  parser.rs  storage.rs
probe/: README.md  decorator.ts  index.ts  tsconfig.json  websocket-client.ts
src/: extension.ts  types.ts
src/ai/: promptGenerator.ts
src/commands/: setupProbe.ts
src/storage/: captureManager.ts  snapshotManager.ts
src/templates/: index.ts  probe-decorator.ts
src/ui/: statusBar.ts
src/visualization/: callStackBuilder.ts  codeLensProvider.ts  comparisonView.ts  decorationManager.ts  flameGraphView.ts
src/websocket/: portManager.ts  server.ts
